--- a/components/InputFile.css
+++ b/components/InputFile.css
@@ -1,4 +1,5 @@
 . {
+    position:absolute;
     flex:0 0;
     border:1px solid var(--bg-color);
 }
@@ -11,18 +12,22 @@ input[type=file] {
     display:flex;
     align-items: center;
     text-align:center;
-    border:3px dashed var(--page-border);
-    height:10vw;
-    width:10vw;
+    border:1px solid var(--text-color);
+    border-radius:3px;
     cursor:pointer;
+    height:26px;
+    width:26px;
+    background-color:var(--bg-color);
+    transition:all 100ms;
 }
 .drop-box IMG {
     width:100%;
-    object-fit: contain;
+    height:100%;
+    object-fit: cover;
 }
 .drop-box .icon {
     flex:1 1;
-    font-size:3em;
+    font-size:0.9em;
     opacity:.5;
 }
 .drop-box .file-profile {
@@ -33,4 +38,9 @@ input[type=file] {
 }
 .file-name {
     font-weight:bold;
+}
+.drop-box:hover {
+    z-index:100;
+    height:200px;
+    width:200px;
 }
