--- a/components/InputImage.css
+++ b/components/InputImage.css
@@ -1,4 +1,7 @@
 . {
+    display:flex;
+    flex-direction: column;
+    align-items:center;
     flex:0 0;
     border:1px solid var(--bg-color);
 }
