--- a/components/InputImage.css
+++ b/components/InputImage.css
@@ -1,8 +1,7 @@
 . {
-    display:flex;
-    flex-direction: column;
     align-items:center;
     flex:0 0;
+    min-width: 30px;
 }
 .progress-display {
     position:absolute;
