--- a/components/InputMultipleImages.css
+++ b/components/InputMultipleImages.css
@@ -5,17 +5,32 @@
     flex-direction: column;
 }
 .drop-box {
+    position: relative;
     flex:.5 0;
-    border:1px solid black;
+    border:1px solid var(--page-border);
     margin:var(--spacer);
-    overflow:hidden;
-    min-height:140px
+    overflow-y:scroll;
 }
 .drop-box img {
     cursor:pointer;
+    width:8%;
+}
+.drop-box .ToolTip {
+    position:absolute;
+    left:var(--spacer);
+    right:var(--spacer);
+    bottom:0;
+    text-align:center;
+    transition: opacity 1s ease;
+    opacity: 1;
+}
+.drop-box .ToolTip.hidden {
+    z-index:-1000;
+    opacity: 0;
 }
 .drop-box img.fixed {
     margin:var(--spacerhalf);
+    transition: all 500ms ease;
 }
 .pending-upload {
     height:60px;
@@ -25,7 +40,7 @@
 .upload-container {
     position:relative;
     display: inline-flex;
-    background-color:var(--pending-color);
+    background-color:var(--action-color);
     height:60px;
     width:60px;
     margin:var(--spacerhalf);
@@ -41,53 +56,25 @@
     margin:var(--spacer);
     position:relative;
 }
+.item-controls {
+    display:flex;
+    flex-direction: row;
+}
 .properties-image-container {
     flex:1;
     position:relative;
+    cursor:pointer;
 }
 .properties-image-container img {
-    /*position:absolute;*/
-    /*top:0;*/
-    /*left:0;*/
+    position:absolute;
+    top:0;
+    left:0;
     width:100%;
 }
 .properties-details-container {
-    display:flex;
-    flex-direction: column;
     flex:0;
-    margin-left:var(--spacerhalf);
+    margin-left:var(--spacer);
 }
-.properties-details-container #image-id {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    opacity:0.8;
-    font-size:0.8em;
+.properties-details-container h2 {
     margin-top:0;
-    margin-bottom:var(--spacerhalf);
-}
-.properties-details-container #image-description {
-    resize:none;
-}
-.InputInlineTable {
-    font-size:0.8em;
-}
-.InputInlineTable .Button {
-    font-size:0.8em;
-    margin:0;
-    padding:0;
-}
-.InputInlineTable .Button BUTTON {
-    height:26px;
-}
-@media only screen and (max-width: 600px) {
-    .item-properties {
-        flex-direction: column;
-    }
-    .properties-details-container {
-        margin-left:0 !important;
-    }
-    .InputInlineTable {
-        background-color:green;
-        display:none !important;
-    }
 }
